# svc-idcreate

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CONTENTMULTIMAP_STORAGE_GUIDE.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_PLAN.md  MCP_GUIDE.md  PROVISIONING_GUIDE.md  PROVISIONING_IMPLEMENTATION_PLAN.md  PROVISIONING_REFACTOR_PLAN.md  README.md  SFConstants.py  STORAGE_IMPLEMENTATION_GUIDE.md  SUGGESTIONS.md  companion_app_design.md  env.sample  id_create_service.py  main.py  provisioning_update.md  pyproject.toml  rpc_manager.py  sample.docker-compose.yaml  verus_node_rpc.py  worker.py
clients/python/: README.md  idcreate_client.py
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json
mcp_server/python/: README.md  server.py  tools.py
provisioning/: __init__.py  adapters.py  engine.py  package-lock.json  package.json  router.py
provisioning/src/: base58check.js  build-challenge.js  build-response.js  verify-request.js
scripts/: provisioning_phase6_canary_check.sh  provisioning_phase6_full_cutover.sh  provisioning_phase6_staging_check.sh  run_provisioning_http_tests.sh
tests/: test_mcp_server_smoke.py  test_mcp_tools.py  test_provisioning_adapter_selection.py  test_provisioning_api.py  test_provisioning_golden_vectors.py  test_provisioning_http_adapter_contract.py  test_python_client.py  test_registration_api.py  test_smoke.py  test_storage_api.py  test_storage_retrieval_api.py  test_storage_rpc.py  test_storage_service.py  test_storage_worker.py  test_worker.py
tests/fixtures/: provisioning_golden_vectors.json
(+4 files in other folders)
