[project]
name = "identity-creation-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ecdsa>=0.19.2",
    "fastapi[standard]>=0.128.0",
    "mcp>=1.0.0",
    "slick-bitcoinrpc>=0.1.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
